--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body {
+    padding-top: 35px;
+    height: 1500px;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 5px;
+    background-color: #526387;
+}
+
 * {
     margin: 0;
     padding: 0;
